[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
html2md = "0.2.15"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
regex = "1.11.1"
scraper = "0.22"
