[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
html2md = "0.2.15"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
scraper = "0.23.1"
